--- a/search/static/sass/main.scss
+++ b/search/static/sass/main.scss
@@ -85,7 +85,7 @@ nav {
     position: fixed;
     width: 100%;
     padding: 2px 0;
-    z-index: 1000;
+    z-index: 1005;
     box-shadow: 0 -1px 0 0 rgba(255,255,255, 0.08) inset;
     @include horizontal_gradient(rgba(25,25,25, 0.8), rgba(10,10,10, 0.8));
 
@@ -266,7 +266,7 @@ button {
     position: fixed;
     background-color: #333;
     top: 50%; left: 50%;
-    z-index: 1000;
+    z-index: 1010;
     padding: $padding;
     box-shadow: 0 0 0 1px rgba(255,255,255, 0.1) inset;
 
@@ -319,7 +319,7 @@ button {
     position: fixed;
     top: 0; left: 0;
     width: 100%; height: 100%;
-    z-index: 999;
+    z-index: 1000;
     background-color: rgba(0,0,0, 0.8);
     cursor: pointer;
 }
